--- a/lib/engweb_web/components/layouts/app.html.heex
+++ b/lib/engweb_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto">
+<main class="h-full">
+  <div class="mx-auto h-full">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
