--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -1,16 +1,20 @@
 <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
-<.header>
-  <%= @road.name %>
-  <:actions>
-    <.link patch={~p"/roads/#{@road.id}/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit road</.button>
-    </.link>
-    <.link patch={~p"/roads/#{@road.id}/delete"} phx-click={JS.push_focus()}>
-      <.button>Delete road</.button>
-    </.link>
-  </:actions>
-</.header>
+  <.header>
+    <%= @road.name %>
+    <:actions>
+      <.link patch={~p"/roads/#{@road.id}/edit"} phx-click={JS.push_focus()}>
+        <.button>Edit road</.button>
+      </.link>
+      <.link patch={~p"/roads/#{@road.id}/delete"} phx-click={JS.push_focus()}>
+        <.button>Delete road</.button>
+      </.link>
+    </:actions>
+  </.header>
 <% end %>
+
+<h1 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600">
+    Informações da Rua
+</h1>
 
 <.list>
   <:item title="Road Number"><%= @road.id %></:item>
@@ -18,9 +22,11 @@
   <:item title="Description"><%= @road.description %></:item>
 </.list>
 
-<div style="text-align: center; margin-top: 30px; margin-bottom: 40px;">
+<div style=" margin-top: 30px; margin-bottom: 40px;">
+  <h2 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600">
+    Imagens Atuais
+  </h2>
   <div class="items-center">
-    <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Imagens Atuais (2019)</h2>
     <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") and (Enum.count(@current_images) < @max_current_image_uploads) do %>
       <.link patch={~p"/roads/#{@road.id}/current_image/new"} phx-click={JS.push_focus()} class="flex justify-end">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-square">
@@ -31,31 +37,38 @@
     <% end %>
   </div>
   <%= if @current_images do %>
-    <div class="max-w-screen-xl mx-auto">
-      <ul style="list-style-type: none; padding: 0; margin: 0;">
+    <div class="container mx-auto px-5 py-2 lg:px-32 lg:pt-12">
+      <div class="-m-1 flex flex-wrap md:-m-2">
         <%= for image <- @current_images do %>
-          <li style="display: inline-block; margin: 0 2vw;">
-            <img src={image.image} style="max-width: 25vw; height: auto; display: block; margin: 0 auto 4vw;">
-            <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
-            <.link patch={~p"/roads/#{@road.id}/current_image/#{image.id}/delete"} phx-click={JS.push_focus()} class="flex justify-center mb-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-square">
-                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                <line x1="9" y1="9" x2="15" y2="15"/>
-                <line x1="15" y1="9" x2="9" y2="15"/></svg>                  
-            </.link>
-          <% end %>
-          </li>
+          <div class="flex w-1/3 justify-center p-1 md:p-2">
+            <div class="w-full">
+              <img
+                alt="gallery"
+                class="block h-full w-full rounded-lg object-cover object-center"
+                src={image.image} />
+              <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
+              <.link patch={~p"/roads/#{@road.id}/current_image/#{image.id}/delete"} phx-click={JS.push_focus()} class="flex justify-center mb-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-square">
+                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                  <line x1="9" y1="9" x2="15" y2="15"/>
+                  <line x1="15" y1="9" x2="9" y2="15"/></svg>                  
+              </.link>
+            <% end %>
+            </div>
+          </div>
         <% end %>
-      </ul>
+      </div>
     </div>
   <% else %>
-    <p>No current image available.</p>
+    <p>Não há imagens atuais disponíveis</p>
   <% end %>
 </div>
 
-<div style="text-align: center; margin-top: 30px; margin-bottom: 40px;">
+<div style="margin-top: 30px; margin-bottom: 40px;">
+  <h2 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600">
+    Imagens Antigas
+  </h2>
   <div class="items-center">
-    <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Imagens Antigas</h2>
     <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") and (Enum.count(@images) < @max_image_uploads) do %>
       <.link patch={~p"/roads/#{@road.id}/image/new"} phx-click={JS.push_focus()} class="flex justify-end">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-square">
@@ -66,15 +79,19 @@
     <% end %>
   </div>
   <%= if Enum.empty?(@images) do %>
-    <p>No images available.</p>
+    <p>Não há imagens antigas disponíveis</p>
   <% else %>
-    <ul style="list-style-type: none; padding: 0; margin: 0;">
-      <%= for image <- @images do %>
-        <li style="display: inline-block; margin: 0 10px;">
-          <div style="text-align: center;">
-            <img src={image.image} alt={image.legenda} style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
-            <p style="font-weight: bold; margin-bottom: 20px;"><%= image.legenda %></p>
-            <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
+    <div class="container mx-auto px-5 py-2 lg:px-32 lg:pt-12">
+      <div class="-m-1 flex flex-wrap md:-m-2">
+        <%= for image <- @images do %>
+          <div class="flex w-1/3 justify-center p-1 md:p-2">
+            <div class="w-full">
+              <img
+                alt="gallery"
+                class="block h-full w-full rounded-lg object-cover object-center"
+                src={image.image} />
+              <p class="font-bold text-center my-2"><%= image.legenda %></p>
+              <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
               <.link patch={~p"/roads/#{@road.id}/image/#{image.id}/delete"} phx-click={JS.push_focus()} class="flex justify-center mb-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-square">
                   <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
@@ -82,39 +99,40 @@
                   <line x1="15" y1="9" x2="9" y2="15"/></svg>                  
               </.link>
             <% end %>
+            </div>
           </div>
-        </li>
-      <% end %>
-    </ul>
+        <% end %>
+      </div>
+    </div>
   <% end %>
 </div>
 
-<div style="text-align: center; margin-top: 30px; margin-bottom: 40px;">
-  <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Casas</h2>
+<h2 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600">
+    Casas
+</h2>
+<div class="container relative flex flex-col justify-between h-full max-w-6xl px-10 mx-auto xl:px-0 mt-5 mb-20">
   <%= if Enum.empty?(@houses) do %>
-    <p>No houses available.</p>
+    <p style="text-align: center;">Não há casas disponíveis</p>
   <% else %>
-    <div class="overflow-x-auto">
-      <table class="min-w-full bg-white border border-gray-300">
-        <thead>
-          <tr>
-            <th class="py-2 px-4 border-b">Number</th>
-            <th class="py-2 px-4 border-b">Enfiteuta</th>
-            <th class="py-2 px-4 border-b">Foro</th>
-            <th class="py-2 px-4 border-b">Description</th>
-          </tr>
-        </thead>
-        <tbody>
-          <%= for house <- @houses do %>
-            <tr>
-              <td class="py-2 px-4 border-b"><%= house.num %></td>
-              <td class="py-2 px-4 border-b"><%= house.enfiteuta %></td>
-              <td class="py-2 px-4 border-b"><%= house.foro %></td>
-              <td class="py-2 px-4 border-b"><%= house.description %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <div class="w-full">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+        <%= for {house, index} <- Enum.with_index(@houses) do %>
+          <% classes = ["border-blue-100", "border-blue-200", "border-blue-300", "border-blue-400", "border-blue-500", "border-blue-600", "border-blue-700", "border-blue-800", "border-blue-900"] %>
+          <% border_class = Enum.at(classes, rem(index, length(classes))) %>
+          <div class="relative h-full ml-0 mr-0 sm:mr-10 mb-10">
+            <span class="absolute top-0 left-0 w-full h-full mt-1 ml-1 bg-indigo-500 rounded-lg"></span>
+            <div class="relative h-full p-5 bg-white border-2 rounded-lg #{border_class}">
+              <div class="flex items-center -mt-1">
+                <h3 class="my-2 ml-3 text-lg font-bold text-gray-800">Casa <%= house.num %></h3>
+              </div>
+              <hr class="my-4 border-indigo-500">
+              <p class="mb-2 text-gray-600"><strong>Enfiteuta:</strong> <%= house.enfiteuta %></p>
+              <p class="mb-2 text-gray-600"><strong>Foro:</strong> <%= house.foro %></p>
+              <p class="mb-2 text-gray-600"><strong>Descrição:</strong> <%= house.description %></p>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
   <% end %>
 </div>
