--- a/lib/engweb_web/live/user_live/user_profile_live.html.heex
+++ b/lib/engweb_web/live/user_live/user_profile_live.html.heex
@@ -1,6 +1,6 @@
 <div class="flex flex-row space-x-6 mx-auto border rounded-lg py-6 px-4 bg-gray-200">
   <div class="flex-none pr-5 border-r-2 border-gray-500">
-    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#007FFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/>
       <circle cx="12" cy="10" r="3"/>
       <circle cx="12" cy="12" r="10"/>
@@ -26,13 +26,13 @@
 
     <!-- Navigation Tabs -->
     <div class="flex space-x-4 border-b mb-4">
-      <a href={profile_url(@user.id, "overview")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :overview, do: "bg-gray-300 text-black", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
+      <a href={profile_url(@user.id, "overview")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :overview, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
         Overview
       </a>
-      <a href={profile_url(@user.id, "roads")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :roads, do: "bg-gray-300 text-black", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
+      <a href={profile_url(@user.id, "roads")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :roads, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
         Roads
       </a>
-      <a href={profile_url(@user.id, "comments")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :comments, do: "bg-gray-300 text-black", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
+      <a href={profile_url(@user.id, "comments")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :comments, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
         Comments
       </a>
     </div>
