feat: edit comments

--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -151,12 +151,12 @@
                 </svg>
               </button>
               <div id="options-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-2 z-20">
-                <a href="#" phx-click="edit_comment" phx-value-comment_id={comment.id} class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
+                <.link patch={~p"/roads/#{@road.id}/comment/#{comment.id}/edit"} class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
                   <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
                   </svg>
                   Edit
-                </a>
+                </.link>
                 <a href="#" phx-click="delete_comment" phx-value-comment_id={comment.id} class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
                   <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
@@ -228,6 +228,19 @@
     road={@road}
     current_user={@current_user}
     patch={~p"/roads/#{@road.id}"}
+    />
+</.modal>
+
+<.modal id="comment-modal" :if={@live_action == :edit_comment} show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+  <.live_component
+    module={EngwebWeb.RoadLive.FormEditComment}
+    id={@road.id}
+    title={@page_title}
+    action={@live_action}
+    road={@road}
+    comment={@comment}
+    current_user={@current_user}
+    patch={~p"/roads/#{@road.id}"} 
     />
 </.modal>
 
