--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -114,6 +114,7 @@
               <th class="py-2 px-4 border-b">Foro</th>
               <th class="py-2 px-4 border-b">Description</th>
               <%= if @current_user !=nil and (@current_user.id==@road.user_id or @current_user.role=="admin" ) do %>
+                <th class="py-2 px-4 border-b">Edit</th>
                 <th class="py-2 px-4 border-b">Delete</th>
               <% end %>
             </tr>
@@ -126,6 +127,14 @@
                 <td class="py-2 px-4 border-b"><%= house.foro %></td>
                 <td class="py-2 px-4 border-b"><%= house.description %></td>
                 <%= if @current_user !=nil and (@current_user.id==@road.user_id or @current_user.role=="admin" ) do %>
+                  <td class="py-2 px-4 border-b">
+                    <.link patch={~p"/roads/#{@road.id}/house/#{house.id}/edit"} phx-click={JS.push_focus()}
+                      class="flex justify-center mb-2">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                      </svg>
+                    </.link>
+                  </td>
                   <td class="py-2 px-4 border-b">
                     <.link patch={~p"/roads/#{@road.id}/house/#{house.id}/delete"} phx-click={JS.push_focus()}
                       class="flex justify-center mb-2">
@@ -175,7 +184,7 @@
     />
 </.modal>
 
-<.modal :if={@live_action in [:new_image, :new_current_image]} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+<.modal :if={@live_action in [:new_image, :new_current_image]} id="image-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
   <.live_component
     module={EngwebWeb.RoadLive.FormNewImageComponent}
     id={@road.id}
@@ -187,7 +196,7 @@
     />
 </.modal>
 
-<.modal :if={@live_action == :new_house} id="road-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
+<.modal :if={@live_action in [:new_house, :edit_house]} id="house-modal" show on_cancel={JS.patch(~p"/roads/#{@road.id}")}>
   <.live_component
     module={EngwebWeb.RoadLive.FormNewHouse}
     id={@road.id}
