--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -142,15 +142,32 @@
                     <div class="w-full">
                       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                         <%= for {house, index} <- Enum.with_index(@houses) do %>
-                          <% classes=["border-blue-100", "border-blue-200" , "border-blue-300" , "border-blue-400", "border-blue-500" , "border-blue-600" , "border-blue-700" , "border-blue-800", "border-blue-900" ] %>
                             <div class="relative h-full ml-0 mr-0 sm:mr-10 mb-10">
-                              <span
-                                class="absolute top-0 left-0 w-full h-full mt-1 ml-1 bg-indigo-500 rounded-lg"></span>
+                              <span class="absolute top-0 left-0 w-full h-full mt-1 ml-1 bg-indigo-500 rounded-lg"></span>
                               <div class="relative h-full p-5 bg-white border-2 rounded-lg #{border_class}">
-                                <div class="flex items-center -mt-1">
-                                  <h3 class="my-2 ml-3 text-lg font-bold text-gray-800">Casa <%= house.num %>
-                                  </h3>
-                                </div>
+                                <div class="flex items-center -mt-1 justify-between">
+                                  <div class="flex justify-start">
+                                    <h3 class="my-2 ml-3 text-lg font-bold text-gray-800">Casa <%= house.num %></h3>
+                                  </div>
+                                  <%= if @current_user != nil and (@current_user.id == @road.user_id or @current_user.role == "admin") do %>
+                                    <div class="flex justify-end gap-x-2 ml-auto">
+                                      <.link patch={~p"/roads/#{@road.id}/house/#{house.id}/edit"} phx-click={JS.push_focus()}>
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                          <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                                        </svg>
+                                      </.link>
+                                      <.link patch={~p"/roads/#{@road.id}/house/#{house.id}/delete"} phx-click={JS.push_focus()}>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                          stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                          class="feather feather-x-square">
+                                          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
+                                          <line x1="9" y1="9" x2="15" y2="15" />
+                                          <line x1="15" y1="9" x2="9" y2="15" />
+                                        </svg>
+                                      </.link>
+                                    </div>
+                                  <% end %>
+                                </div>                                
                                 <hr class="my-4 border-indigo-500">
                                 <p class="mb-2 text-gray-600"><strong>Enfiteuta:</strong>
                                   <%= house.enfiteuta %>
@@ -319,7 +336,6 @@
           patch={~p"/roads/#{@road.id}"} />
       </.modal>
 
-                            
 <script>
   function showButtons(textarea) {
     const buttons = textarea.nextElementSibling;
