--- a/lib/engweb_web/live/user_live/user_profile_live.html.heex
+++ b/lib/engweb_web/live/user_live/user_profile_live.html.heex
@@ -1,6 +1,6 @@
 <div class="flex flex-row space-x-6 mx-auto border rounded-lg py-6 px-4 bg-gray-200">
   <div class="flex-none pr-5 border-r-2 border-gray-500">
-    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#007FFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/>
       <circle cx="12" cy="10" r="3"/>
       <circle cx="12" cy="12" r="10"/>
@@ -26,9 +26,6 @@
 
     <!-- Navigation Tabs -->
     <div class="flex space-x-4 border-b mb-4">
-      <a href={profile_url(@user.id, "overview")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :overview, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
-        Overview
-      </a>
       <a href={profile_url(@user.id, "roads")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :roads, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
         Roads
       </a>
@@ -39,66 +36,30 @@
 
     <!-- Tab Content -->
     <div>
-      <%= if @active_tab == :overview do %>
-        <%= if Enum.empty?(@roads) and Enum.empty?(@comments) do %>
-          <p>No activity detected</p>
-        <% else %>
-          <h3 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600 mb-10 mt-10">
-              Roads
-          </h3>
-          <ul>
-            <%= for road <- @roads do %>
-              <div class="flex space-x-6 items-center">
-                <%= if Enum.any?(road.current_images) do %>
-                  <% current_image = hd(road.current_images) %>
-                  <div class="relative w-1/2 md:w-3/4 h-96 md:h-[70vh] lg:h-[1/2] cursor-pointer"
-                      phx-click="navigate_to_road"
-                      phx-value-id={road.id}>
-                    <div class="absolute inset-0 flex items-center justify-center overflow-hidden">
-                      <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full transform hover:scale-110 transition duration-500 ease-in-out"/>
-                    </div>
-                    <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2 pr-8">
-                      <p class="text-2xl font-bold"><%= road.name %></p>
-                    </div>
-                  </div>
-                <% end %>
-              </div>
-            <% end %>
-          </ul>
-
-          <h3 class="text-2xl md:text-3xl pl-2 my-2 border-l-4 text-black font-sans font-bold border-blue-600 mb-10 mt-10">
-              Comments
-          </h3>
-          <ul>
-            <%= for comment <- @comments do %>
-              <li><%= comment.comment %> - <%= comment.inserted_at %></li>
-            <% end %>
-          </ul>
-        <% end %>
-      <% end %>
-
       <%= if @active_tab == :roads do %>
         <div class="space-y-6">
           <%= if Enum.empty?(@roads) do %>
             <p>No activity detected</p>
           <% else %>
-            <%= for road <- @roads do %>
-              <div class="flex space-x-6 items-center">
-                <%= if Enum.any?(road.current_images) do %>
-                  <% current_image = hd(road.current_images) %>
-                  <div class="relative w-1/2 md:w-3/4 h-96 md:h-[70vh] lg:h-[1/2] cursor-pointer"
-                      phx-click="navigate_to_road"
-                      phx-value-id={road.id}>
-                    <div class="absolute inset-0 flex items-center justify-center overflow-hidden">
-                      <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full transform hover:scale-110 transition duration-500 ease-in-out"/>
-                    </div>
-                    <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2 pr-8">
-                      <p class="text-2xl font-bold"><%= road.name %></p>
-                    </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-10">
+              <%= for road <- @roads do %>
+                <div class="bg-white rounded-md overflow-hidden cursor-pointer shadow-md" phx-click="navigate_to_road" phx-value-id={road.id}>
+                  <div class="relative group" style="padding-top: 80%;">
+                    <%= if Enum.any?(road.current_images) do %>
+                      <% current_image = hd(road.current_images) %>
+                      <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
+                        <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
+                        <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2">
+                          <p class="text-lg font-bold"><%= road.name %></p>
+                        </div>
+                      </div>
+                    <% end %>
                   </div>
-                <% end %>
-              </div>
-            <% end %>
+                  <div class="grid grid-cols-2 gap-4">
+                  </div>
+                </div>
+              <% end %>
+            </div>
           <% end %>
         </div>
       <% end %>
@@ -110,7 +71,24 @@
             <li>No activity detected</li>
           <% else %>
             <%= for comment <- @comments do %>
-              <li><%= comment.comment %></li>
+              <li>
+                <div class="rounded-lg p-4 mt-4">
+                  <div class="text-gray-600 text-sm mb-2 cursor-pointer" phx-click="navigate_to_road" phx-value-id={comment.road_id}>
+                    Comentado na rua <%= comment.road_id %>
+                  </div>
+                  <p class="text-gray-800 font-bold">
+                    <%= @current_user.name %>
+                  </p>
+                  <div class="pl-4">
+                    <p class="text-gray-800">
+                      <%= comment.comment %>
+                    </p>
+                  </div>
+                  <div class="text-gray-600 text-sm mt-2">
+                    Comentado às <%= comment.inserted_at %>
+                  </div>
+                </div>
+              </li>
             <% end %>
           <% end %>
         </ul>
