fix: fixed options of comments

--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -225,9 +225,9 @@
                             <%= Map.get(comment, :dislikes) %>
                           </span>
                         </div>
-                        <%= if @current_user && (@current_user.id==comment.user_id || @current_user.role=="admin" ) do
-                          %>
-                          <ul class="relative dropdown">
+                        <%= if @current_user && (@current_user.id==comment.user_id || @current_user.role=="admin" ) do %>
+                          <%= id = "comment-#{comment.id}" %>
+                          <div class="relative inline-block text-left" phx-click={JS.toggle(to: "##{id}", in: "block", out: "hidden")} phx-click-away={JS.hide(to: "##{id}")}>
                             <button id="options-button" class="flex items-center focus:outline-none">
                               <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -235,33 +235,35 @@
                                 <path stroke-linecap="round" d="M6 12h.01m6 0h.01m5.99 0h.01" />
                               </svg>
                             </button>
-                            <div id="options-dropdown"
-                              class="hidden absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-2 z-20">
-                              <.link patch={~p"/roads/#{@road.id}/comment/#{comment.id}/edit"}
-                                class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                                  viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
-                                  <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z" />
-                                </svg>
-                                Edit
-                              </.link>
-                              <a href="#" phx-click="delete_comment" phx-value-comment_id={comment.id}
-                                class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                                  viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
-                                  <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z" />
-                                </svg>
-                                Delete
-                              </a>
+                            <div id={id} class="origin-top-right top-full absolute right-0 z-10 mt-2 hidden w-56 rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5">
+                              <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+                                <.link patch={~p"/roads/#{@road.id}/comment/#{comment.id}/edit"}
+                                  class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
+                                  <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                    viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z" />
+                                  </svg>
+                                  Edit
+                                </.link>  
+                                
+                                <a href="#" phx-click="delete_comment" phx-value-comment_id={comment.id}
+                                  class="px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
+                                  <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                    viewBox="0 0 24 24" stroke="#000000" stroke-width="1.2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z" />
+                                  </svg>
+                                  Delete
+                                </a>
+                              </div>
                             </div>
-                          </ul>
+                          </div>
                           <% end %>
+                        </div>
                       </div>
-                    </div>
                     <% end %>
                 </div>
 
@@ -377,21 +379,6 @@
     const forms = document.querySelectorAll('form[phx-submit="add_comment"]');
     forms.forEach(form => {
       form.addEventListener('submit', () => cleanTextareaBeforeSubmit(form));
-    });
-  });
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const profileButton = document.getElementById('options-button');
-    const optionsDropdown = document.getElementById('options-dropdown');
-
-    profileButton.addEventListener('click', () => {
-      optionsDropdown.classList.toggle('hidden');
-    });
-
-    document.addEventListener('click', (event) => {
-      if (!profileButton.contains(event.target) && !optionsDropdown.contains(event.target)) {
-        optionsDropdown.classList.add('hidden');
-      }
     });
   });
 
