--- a/lib/engweb_web/live/road_live/show.html.heex
+++ b/lib/engweb_web/live/road_live/show.html.heex
@@ -49,7 +49,7 @@
         </div>
         <%= if @current_images do %>
           <div class="container mx-auto px-5 py-2 lg:px-32 lg:pt-12">
-            <div class="-m-1 flex flex-wrap md:-m-2">
+            <div class="-m-1 flex flex-wrap md:-m-2 justify-center">
               <%= for image <- @current_images do %>
                 <div class="flex w-1/3 justify-center p-1 md:p-2">
                   <div class="w-full">
@@ -100,7 +100,7 @@
                   <p>Não há imagens antigas disponíveis</p>
                   <% else %>
                     <div class="container mx-auto px-5 py-2 lg:px-32 lg:pt-12">
-                      <div class="-m-1 flex flex-wrap md:-m-2">
+                      <div class="-m-1 flex flex-wrap md:-m-2 justify-center">
                         <%= for image <- @images do %>
                           <div class="flex w-1/3 justify-center p-1 md:p-2">
                             <div class="w-full">
@@ -189,10 +189,12 @@
                 <h2 class="text-2xl font-bold mb-4">Comments</h2>
                 <div class="space-y-4">
                   <%= for comment <- @comments do %>
-                    <div class="bg-white shadow-md rounded-lg p-4">
-                      <p class="text-gray-800 font-bold">
-                        <%= comment.user_name %>
-                      </p>
+                    <div class="bg-white rounded-lg p-4">
+                      <.link patch={~p"/users/#{comment.user_id}/profile"}>
+                        <p class="text-gray-800 font-bold">
+                          <%= comment.user_name %>
+                        </p>
+                      </.link>
                       <div class="pl-4">
                         <p class="text-gray-800">
                           <%= comment.comment %>
@@ -225,7 +227,7 @@
                           </span>
                         </div>
                         <%= if @current_user && (@current_user.id==comment.user_id || @current_user.role=="admin" ) do %>
-                          <%= id = "comment-#{comment.id}" %>
+                          <% id = "comment-#{comment.id}" %>
                           <div class="relative inline-block text-left" phx-click={JS.toggle(to: "##{id}", in: "block", out: "hidden")} phx-click-away={JS.hide(to: "##{id}")}>
                             <button id="options-button" class="flex items-center focus:outline-none">
                               <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
